tests/urmoac/input/wkt/errors/point_broken_id/sources.wkt
#id;pos;[var]
s;POINT(-250 0)
